--- a/src/assets/css/estilos-generales.css
+++ b/src/assets/css/estilos-generales.css
@@ -110,8 +110,67 @@ nav.navbar {
     background-color: #FFFFFFDD !important;
 }
 
+.panel-opciones {
+    visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    bottom: 0px;
+}
+
+.panel-opciones-oculto {
+    visibility: visible;
+    animation: FadeOutFordward 1s ease 0s 1 normal forwards;
+}
+
+.panel-opciones-visible {
+    visibility: visible;
+    animation: fadeInFromLeft 1s ease 0s 1 normal forwards;
+}
+
+@keyframes FadeOutFordward {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    100% {
+        opacity: 0;
+        transform: scale(1.4);
+    }
+}
+
+@keyframes fadeInFromLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 .cursor-pointer {
     cursor: pointer;
+}
+
+.fs-6 {
+    font-size: 1rem;
+}
+
+.fs-7 {
+    font-size: 1.3rem;
+}
+
+.fs-8 {
+    font-size: 1.5rem;
+}
+
+.fs-9 {
+    font-size: 2rem;
 }
 
 .fs-10 {
@@ -141,3 +200,4 @@ nav.navbar {
 .mb-75 {
     margin-bottom: 75px;
 }
+
