Refactorizando partes de codigo. Vamos por editar décimo y mis décimos

--- a/src/assets/css/estilos-generales.css
+++ b/src/assets/css/estilos-generales.css
@@ -73,7 +73,8 @@ input[type="url"]:focus,
 input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
-.uneditable-input:focus {
+.uneditable-input:focus,
+.accordion-button:focus{
     border-color: rgba(253,137,86, 0.8);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(253,137,86, 0.6);
     outline: 0 none;
