--- a/src/assets/css/estilos-generales.css
+++ b/src/assets/css/estilos-generales.css
@@ -135,6 +135,34 @@ nav.navbar {
     font-size: 3rem;
 }
 
+.fs-090 {
+    font-size: 0.90rem;
+}
+
+.fs-085 {
+    font-size: 0.85rem;
+}
+
+.fs-080 {
+    font-size: 0.80rem;
+}
+
+.fs-075 {
+    font-size: 0.75rem;
+}
+
+.fs-070 {
+    font-size: 0.70rem;
+}
+
+.fs-05 {
+    font-size: 0.5rem;
+}
+
+.fs-025 {
+    font-size: 0.25rem;
+}
+
 .lds-ellipsis {
     display: inline-block;
     position: relative;
