--- a/src/assets/css/estilos-generales.css
+++ b/src/assets/css/estilos-generales.css
@@ -54,8 +54,12 @@ a, label {
     border: none !important;
 }
 
-input:not(.file), textarea{
+input:not(.file){
     border-radius: 50px !important;
+}
+
+textarea {
+    border-radius: 10px;
 }
 
 textarea:focus,
@@ -75,9 +79,13 @@ input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus,
 .accordion-button:focus{
-    border-color: rgba(253,137,86, 0.8);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(253,137,86, 0.6);
+    border-color: rgba(253,137,86, 0.8) !important;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(253,137,86, 0.6) !important;
     outline: 0 none;
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: white;
 }
 
 .navbar {
